fix: fix layout right overflow problem

--- a/src/components/ApplicationList/index.module.scss
+++ b/src/components/ApplicationList/index.module.scss
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 26px 80px;
   margin-top: 30px;
 
